# CLI

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  main.cpp
Animation/: CMakeLists.txt  Progress.hpp
Console/: CMakeLists.txt  CommandHandler.hpp  Commands.hpp
Font/: Background.hpp  CMakeLists.txt  Color.hpp  Foreground.hpp  Format.hpp  Gradient.hpp  MultiGradient.hpp  RGB.hpp  RGBA.hpp  Underline.hpp
